--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>cm to inch Converter</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <script src="/scripts/cm-in-converter.js"></script>
+    <script src="scripts/cm-in-converter.js"></script>
   </head>
 
   <body>
